[package]
name = "ansi-hex-color"
description = "Color the text on the terminal with ANSI and hex-code"
version = "0.1.0"
authors = ["hideckies <hideckies@gmail.com>"]
edition = "2018"
keywords = ["ansi", "terminal", "hex", "color"]
categories = ["command-line-interface"]
documentation = "https://docs.rs/ansi_hex_color"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hideckies/ansi-hex-color"

[dependencies]
raster = "0.2.0"
regex = "1"

[lib]
name = "ansi_hex_color"

# [[bin]]
# name = "color_samples"
# path = "examples/color_samples.rs"